kubernetes/wwi/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wwi
  labels:
    pswebinar: "21.05"
