kubernetes/wwi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wwi-svc
  namespace: wwi
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: wwi
    component: svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwi-svc
  namespace: wwi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wwi
      component: svc
  template:
    metadata:
      labels:
        app: wwi
        component: svc
    spec:
      automountServiceAccountToken: false
      containers:
        - image: sixeyed/wwi-svc:ltsc2019
          name: app
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: "/inetpub/wwwroot/config"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 400Mi  
      volumes:
        - name: config
          projected:
            sources:
              - configMap:
                  name: wwi-svc-appsettings
              - configMap:
                  name: wwi-svc-logging
              - secret:
                  name: wwi-svc-connectionstrings
      nodeSelector:
        kubernetes.io/os: windows
