kubernetes/wwi/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wwi-api
  namespace: wwi
  labels:
    app: wwi
    component: api
spec:
  rules:
  - host: api.wwi.sixeyed.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wwi-api
            port:
              name: http
